--- a/Rock-Paper-Scissors/index.html
+++ b/Rock-Paper-Scissors/index.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     
-    <div class="win-streak">Your win streak is: 0</div>
+    <div class="win-streak">Your winnner streak is: 0</div>
     <div id="timer">You have: 30s left!</div>
 </body>
 </html>
